fix: form header button alignment

--- a/client/dashboard/app/styles/components/FormSteps.scss
+++ b/client/dashboard/app/styles/components/FormSteps.scss
@@ -17,7 +17,6 @@
 
   h1 {
     color: var(--color-header);
-    margin-left: 2rem;
 
     @include for-mobile-only {
       margin-bottom: 1rem;
@@ -150,7 +149,7 @@
   
     h1 {
       font-size: 2rem;
-      margin-left: 0rem;
+      margin-left: 0;
     }
   }
 
